umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@indigo_ChEBI_12821.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: results
---
expected_category: molecule
category: molecule
molecule:
  success: true
  summary:
    sum_formula: C42H14N28O14
    atom_count: 98
    bond_count: 119
    property_count: 1
molecule_lenient:
  success: true
  summary:
    sum_formula: C42H14N28O14
    atom_count: 98
    bond_count: 119
    property_count: 1
extended_molecule:
  success: true
  extended_summary:
    sum_formula: C42H14N28O14
    atom_count: 98
    bond_count: 119
    extended_atoms: 0
    extended_bonds: 0
    property_count: 1
    rgroup_count: 0
    sgroup_count: 0
extended_molecule_lenient:
  success: true
  extended_summary:
    sum_formula: C42H14N28O14
    atom_count: 98
    bond_count: 119
    extended_atoms: 0
    extended_bonds: 0
    property_count: 1
    rgroup_count: 0
    sgroup_count: 0
